--- a/package.json
+++ b/package.json
@@ -6,5 +6,13 @@
   "dependencies": {
     "express": "^4.15.4",
     "socket.io": "^2.0.3"
-  }
+  },
+  "scripts": {
+    "start": "node app",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "tetsuyatmk/socketio"
+  },
 }
